<resources>
    <string name="app_name">Sklep Komputerowy</string>
    <string name="number">ILOŚĆ</string>
    <string name="name">NAZWA</string>
    <string name="mouse">Mysz</string>
    <string name="keyboard">Klawiatura</string>
    <string name="camera">Kamera</string>
    <string name="save">Zapisz</string>
    <string name="price">Cena</string>
    <string name="numb">Ilość</string>
    <string name="zamawiam">Zamawiam</string>
    <string name="order">Zamównienie</string>
    <string name="cantSendOrder">"Nie można wysłać zamównienia, ponieważ ilość wynosi 0 elementów."</string>
    <string name="ok" translatable="false">OK</string>
    <string name="anuluj">anuluj</string>
    <string name="send_email">Wyślij e-mail</string>
    <string name="send_sms">Wyślij SMS</string>
    <string name="mainPage">Strona Główna</string>
    <string name="author">Autor</string>
    <string name="myOrders">Moje zamówienia</string>
    <string name="shop">Sklep</string>
    <string name="oferta">OFERTA</string>
    <string name="witaj_w_sklepie_komputerowym">Witaj w sklepie komputerowym!</string>
    <string name="zacznij_zakupy">ZACZNIJ ZAKUPY!</string>
    <string name="login" translatable="false">Login</string>
    <string name="has_o">Hasło</string>
    <string name="notFount">Nie znaleziono użytkownika</string>
    <string name="wrongPass">Złe hasło</string>
    <string name="numer_telefonu">Numer Telefonu</string>
    <string name="wyloguj_si">Wyloguj się</string>
</resources>