<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/witaj_w_sklepie_komputerowym"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oferta"
        android:textStyle="bold"
        android:padding="10dp"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <include layout="@layout/productsmap" />
        </LinearLayout>
    </HorizontalScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/startBuy"
        android:backgroundTint="@color/main"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/zacznij_zakupy"
        />

</LinearLayout>