<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center|top"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finishText"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/black"

        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginEnd="10dp"
            android:text="CENA:0"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:id="@+id/priceTextBox"

            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/goBackBtn"
            android:text="@string/anuluj"
            android:backgroundTint="#ffff2222"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:id="@+id/okayButton"
            android:backgroundTint="#ff22ff22"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>








</LinearLayout>