<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainspiner"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.google.android.material.slider.Slider
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:id="@+id/numbPick"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:width="50dp"
            android:height="50dp"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:gravity="center"
            android:textFontWeight="900"
            android:id="@+id/wieViel"
            />
    </LinearLayout>


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mouse"
        android:textStyle="bold"
        android:textColor="@color/main"
        android:textAllCaps="true"
        android:id="@+id/AddMouse"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MouseSpinner"
        android:textColor="@color/black"
        android:background="@color/main"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keyboard"
        android:textStyle="bold"
        android:textColor="@color/main"
        android:textAllCaps="true"
        android:id="@+id/AddKeyboard"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/KeyboardSpinner"
        android:background="@color/main"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/main"
        android:text="@string/camera"
        android:textAllCaps="true"
        android:id="@+id/AddCamera"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CameraSpinner"
        android:textColor="@color/black"
        android:background="@color/main"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/main"
        android:text="@string/zamawiam"
        android:textColor="@color/black"
        android:id="@+id/order"
        />

</LinearLayout>